--- a/components101/package.json
+++ b/components101/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0-beta.7",
+    "@angular/animations": "^5.2.8",
     "@angular/common": "^6.0.0-beta.7",
     "@angular/compiler": "^6.0.0-beta.7",
     "@angular/core": "^6.0.0-beta.7",
